# imu_gnss_fusion

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  agent.md  arch.pen  estimating mounting angles.md  test_files.txt  tmp_loose_matlab_exact_step.m  tmp_loose_matlab_outage_eval.m  tmp_loose_matlab_replay.m
align/: Cargo.toml  NONLINEAR_MISALIGNMENT_EKF.md  README.md  align.py  code_gen.py  misalignment.md  prototype.py  prototype_rust.py
align/src/: align.rs  align_misalign.rs  align_nhc.rs  coarse.rs  horizontal_heading.rs  init_monitor.rs  lib.rs  longitudinal.rs  misalign_coarse.rs  pybindings.rs  yaw_pca.rs  yaw_startup.rs
align/src/align_generated/: coarse_mekf_obs_generated.rs  coarse_mekf_obs_jacobian_generated.rs  gyro_rate_obs_jacobian_generated.rs  gyro_rate_pred_generated.rs  nhc_obs_jacobian_generated.rs  predict_velocity_generated.rs  velocity_obs_jacobian_generated.rs
align/tests/: align_mekf.rs  forward_axis.rs  misalign_basic.rs  misalign_property.rs
ekf/: Cargo.toml  ESKF_PLAN.md  build.rs  code_gen.py  ekf.py  eskf.py  ins_gnss_loose.py
ekf/c/: Makefile  PORTING_PLAN.md  ekf.c  ekf.h
ekf/c/generated_eskf/: attitude_reset_jacobian_generated.c  body_vel_x_generated.c  body_vel_y_generated.c  body_vel_z_generated.c  covariance_prediction_generated.c  error_noise_input_generated.c  error_transition_generated.c  gps_pos_d_generated.c  gps_pos_e_generated.c  gps_pos_n_generated.c  gps_vel_d_generated.c  gps_vel_e_generated.c  gps_vel_n_generated.c  nominal_prediction_generated.c  stationary_accel_x_generated.c  stationary_accel_y_generated.c
ekf/c/generated_loose/: attitude_reset_jacobian_generated.c  body_vel_x_generated.c  body_vel_y_generated.c  body_vel_z_generated.c  error_noise_input_generated.c  error_transition_generated.c  gps_pos_d_generated.c  gps_pos_e_generated.c  gps_pos_n_generated.c  gps_vel_d_generated.c  gps_vel_e_generated.c  gps_vel_n_generated.c  nominal_prediction_generated.c  reference_error_noise_input_generated.c  reference_error_transition_generated.c  reference_nhc_y_generated.c  reference_nhc_z_generated.c
ekf/c/include/: sensor_fusion.h  sensor_fusion_defs.h  sensor_fusion_internal.h  sf_eskf.h  sf_loose.h
ekf/c/src/: sensor_fusion.c  sf_align.c  sf_ekf.c  sf_eskf.c  sf_loose.c  sf_stationary_mount.c
ekf/c/tests/: embedded.ld  embedded_m7.ld  embedded_semihosting.c  embedded_startup.c  run_with_timeout.py  test_main.c
ekf/src/: align.rs  c_api.rs  ekf.rs  eskf.rs  eskf_types.rs  fusion.rs  generated_eskf.rs  generated_loose.rs  lib.rs  loose.rs  rust_eskf.rs  stationary_mount.rs
ekf/src/ekf_generated/: body_vel_y_generated.rs  body_vel_z_generated.rs  covariance_generated.rs  gps_pos_d_generated.rs  gps_pos_e_generated.rs  gps_pos_n_generated.rs  gps_vel_d_generated.rs  gps_vel_e_generated.rs  gps_vel_n_generated.rs  prediction_generated.rs
ekf/src/generated_eskf/: attitude_reset_jacobian_generated.rs  body_vel_x_generated.rs  body_vel_y_generated.rs  body_vel_z_generated.rs  error_noise_input_generated.rs  error_transition_generated.rs  error_transition_support_generated.rs  gps_pos_d_generated.rs  gps_pos_e_generated.rs  gps_pos_n_generated.rs  gps_vel_d_generated.rs  gps_vel_e_generated.rs  gps_vel_n_generated.rs  nominal_prediction_generated.rs  stationary_accel_x_generated.rs  stationary_accel_y_generated.rs
ekf/src/generated_loose/: reference_error_noise_input_generated.rs  reference_error_transition_generated.rs  reference_nhc_y_generated.rs  reference_nhc_z_generated.rs  reference_support_generated.rs
ekf/tests/: c_parity.rs  decimation_scaling.rs  eskf_nhc_jacobian.rs  eskf_state_ops.rs  eskf_update_diag.rs  fusion_api.rs  loose_api.rs  loose_mount_observability.rs  nhc_eskf_loose_equivalence.rs  refactor_equivalence.rs  rust_eskf_parity.rs  rust_fusion_parity.rs  rust_loose_parity.rs  vehicle_vel_mount.rs
esp32s3/components/sensor_fusion/: CMakeLists.txt
logger/: Cargo.toml
logger/vendor_re_sdk/: Cargo.toml
logger/vendor_re_sdk/src/blueprint/: container.rs  mod.rs  (+1 more)
sim/: Cargo.toml  README.md  run_align_gnss_ins_sim_plotly.py  run_eskf_gnss_ins_sim_plotly.py  run_loose_gnss_ins_sim_plotly.py  run_seeded_loose_stress_sim.py  sweep_align_gnss_ins_sim.py
sim/motion_profiles/: city_blocks_15min.csv  city_blocks_15min.scenario  figure8_15min.csv  figure8_15min.scenario  figure8_30min.scenario  figure8_pitch3_15min.csv  figure8_pitch3_15min.scenario  figure8_pitchstep_middrive_15min.csv  figure8_pitchstep_middrive_15min.scenario  figure8_pitchstep_middrive_3dps_15min.csv  figure8_pitchstep_middrive_3dps_15min.scenario  figure8_roll_excitation_30min.scenario  grade_stops_city_15min.csv  grade_stops_city_15min.scenario  real_early_bad_basin.scenario  seeded_highspeed_straight_10min.csv  seeded_highspeed_straight_10min.scenario  sloped_start_recovery_15min.csv  sloped_start_recovery_15min.scenario  straight_accel_brake_15min.csv  straight_accel_brake_15min.scenario  straight_accel_brake_flat_trimmed_15min.csv  straight_accel_brake_flat_trimmed_15min.scenario  straight_accel_brake_pitch3_15min.csv  straight_accel_brake_pitch3_15min.scenario
sim/src/: lib.rs  ubxlog.rs
sim/src/datasets/: generic_replay.rs  gnss_ins_sim.rs  mod.rs  seeded_full.rs  ubx_replay.rs
sim/src/eval/: config.rs  first_divergence.rs  gnss_ins.rs  mod.rs  replay.rs  state_summary.rs  trace.rs
sim/src/synthetic/: gnss_ins_path.rs  mod.rs  motion_dsl.rs
sim/src/visualizer/: math.rs  mod.rs  model.rs  replay_job.rs  stats.rs  theme.rs  ui.rs
sim/tests/: eval_scaffolding.rs  full_parity.rs  loose_parity.rs  synthetic_gnss_ins.rs  visualizer_replay_equivalence.rs
(+247 files in other folders)
