[package]
name = "pygps-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
eframe = "0.33.3"
egui = "0.33.3"
egui_plot = "0.34.1"
ekf-rs = { path = "../../algo/ekf-rs" }
polars = { version = "0.53", features = ["parquet"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.8.1"
ublox = { path = "../ublox", features = ["std", "ubx_proto23", "ubx_proto27", "ubx_proto31"] }
walkers = "0.52.0"

[[bin]]
name = "parse_pygpsdata_log"
path = "src/bin/parse_pygpsdata_log.rs"

[[bin]]
name = "visualize_pygpsdata_log"
path = "src/bin/visualize_pygpsdata_log.rs"
