[package]
name = "sensor-fusion"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "sensor_fusion"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde"]

[dependencies]
libm = "0.2"
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
