[package]
name = "sim"
version = "0.1.0"
edition = "2024"
license = "MIT"
default-run = "visualizer"

[dependencies]
anyhow = "1"
chrono = { version = "=0.4.44", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
eframe = "0.33.3"
egui = "0.33.3"
egui_plot = "0.34.1"
sensor-fusion = { path = "../ekf" }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
polars = { version = "0.52", features = ["parquet"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serialport = "4.8.1"
ublox = { path = "../ublox", features = ["std", "ubx_proto23", "ubx_proto27", "ubx_proto31"] }
walkers = "0.52.0"
rust_robotics_algo = { path = "/Users/ykshin/Dev/me/RustRobotics/rust_robotics_algo" }

[[bin]]
name = "visualizer"
path = "src/bin/visualizer.rs"
