[package]
name = "sim"
version = "0.1.0"
edition = "2024"
license = "MIT"
default-run = "visualizer"

[dependencies]
anyhow = "1"
chrono = { version = "=0.4.44", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
eframe = "0.33.3"
egui = "0.33.3"
egui_plot = "0.34.1"
sensor-fusion = { path = "../ekf", default-features = false }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng"] }
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
walkers = "0.52.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.118"
wasm-bindgen-futures = "=0.4.68"
